fix: fix bugs again